--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "name": "tema6",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1"
+  }
 }
